--- a/Baze/Todo.csproj
+++ b/Baze/Todo.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.8.26" />
+    <PackageReference Include="MailKit" Version="2.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.5" />
