--- a/Baze/Todo.csproj
+++ b/Baze/Todo.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-Baze-D0FECB3E-C29F-4912-9B30-5D20E443C4FA</UserSecretsId>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
 
   <ItemGroup>
