--- a/Baze/Todo.csproj
+++ b/Baze/Todo.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>aspnet-Baze-D0FECB3E-C29F-4912-9B30-5D20E443C4FA</UserSecretsId>
     <ApplicationIcon>favicon.ico</ApplicationIcon>
     <NoWin32Manifest>true</NoWin32Manifest>
+    <StartupObject>Todo.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
