TD-1 Added edit and modified add item functionality

--- a/Baze/Todo.csproj
+++ b/Baze/Todo.csproj
@@ -9,7 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="favicon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\jquery-datetimepicker\jquery.datetimepicker.full.min.js" />
   </ItemGroup>
 
   <ItemGroup>
