--- a/Baze/appsettings.json
+++ b/Baze/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TodoDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=DESKTOP-L1PC6MK\\SQLEXPRESS;Initial Catalog=TodoDataStorage;Integrated Security=False;User Id=sa;Password=moria;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
