Added Blazor ToDoodle project initail components, added Data library project, minor improvements in MVC version

--- a/Baze/appsettings.json
+++ b/Baze/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-1GFQJA7\\SQLEXPRESS;Initial Catalog=TodoDataStorage;Integrated Security=False;User Id=sa;Password=moria;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=(local);Initial Catalog=TodoDataStorage;Integrated Security=False;User Id=sa;Password=moria;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
